tools: fix CJS/ESM toggle on small screens
PR-URL: https://github.com/nodejs/node/pull/43506
Fixes: https://github.com/nodejs/node/issues/43468

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -953,6 +953,9 @@ kbd {
   background-repeat: no-repeat;
   width: 142px;
   height: 20px;
+  display: block;
+  cursor: pointer;
+  margin: 0;
 }
 .js-flavor-selector:checked {
   background-image: url(./js-flavor-esm.svg);
